[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/spritesheets/pullablering.png" type="Texture" id=1]
[ext_resource path="res://sprites/textures/pullablechain.png" type="Texture" id=2]
[ext_resource path="res://scenes/scripts/PullableChain.gd" type="Script" id=3]
[ext_resource path="res://scenes/entities/Light.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.99999
height = 6.0

[node name="PullableChain" type="Area2D" groups=[
"Resetter",
]]
z_index = 6
z_as_relative = false
collision_layer = 16
collision_mask = 8
script = ExtResource( 3 )

[node name="ChainTop" type="Node2D" parent="."]
position = Vector2( 0, -96 )

[node name="ChainBottom" type="Node2D" parent="."]
position = Vector2( 0, 24 )

[node name="InteractionHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="DrawingLine" type="Line2D" parent="."]
z_index = 6
z_as_relative = false
width = 14.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 2 )
texture_mode = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 8 )
z_index = 6
z_as_relative = false
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="Light" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 11 )
[connection signal="body_entered" from="." to="." method="stick"]
